--- a/src/components/SideDrawer/SideDrawer.css
+++ b/src/components/SideDrawer/SideDrawer.css
@@ -3,7 +3,25 @@
   background-color: lightblue;
   z-index: 100;
   height: 100vh;
-  position:absolute;
-  top:0;
-  left:0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.side-drawer-enter {
+  left: -90px;
+}
+
+.side-drawer-enter-active {
+  left: 0;
+  transition: left 200ms;
+}
+
+.side-drawer-exit {
+  left: 0;
+}
+
+.side-drawer-exit-active {
+  left: -180px;
+  transition: left 200ms;
 }
