--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,22 @@
 }
 
 .open-side-drawer-btn {
-  background-color: rosybrown;
-  padding: 10px;
+  background-color:#666;
+  padding: 5px;
+  border-radius: 5px;
+  width: 40px;
+  height: 40px;
+}
+
+.header-container {
+  background-color: #1a1a1a;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+}
+
+.header-logo {
+  color: white;
+  margin: 0;
 }
