--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,6 +21,7 @@
 }
 
 .header-logo {
-  color: white;
-  margin: 0;
+  color: #0acc00;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
 }
