--- a/src/components/NavLinks/NavLinks.css
+++ b/src/components/NavLinks/NavLinks.css
@@ -1,9 +1,13 @@
-/* .nav-links {
-  background-color: pink;
+.nav-links-container {
+  margin-top: 50px;
+  margin-left: 30px;
 }
 
-@media (max-width: 600px) {
-  .nav-links {
-    display: none;
-  }
-} */
+.nav-link-text {
+  color: #0acc00;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  padding-top: 20px;
+  list-style-type: none;
+  text-decoration: none;
+}
