--- a/src/components/SideDrawer/SideDrawer.css
+++ b/src/components/SideDrawer/SideDrawer.css
@@ -1,6 +1,6 @@
 .side-drawer {
   width: 180px;
-  background-color: lightblue;
+  background-color: #666;
   z-index: 100;
   height: 100vh;
   position: absolute;
